--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@prismicio/client": "^7.19.1",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "framer-motion": "^12.23.12",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
