--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.537.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
